--- a/client/global.css
+++ b/client/global.css
@@ -23,7 +23,7 @@
 
 body {
     font-size: 62.5%;
-    @apply scrollbar-thin  scrollbar-track-[#1e1a20] scrollbar-thumb-[#FF7000];
+    @apply scrollbar-thin  scrollbar-thumb-[#FF7000]  dark:scrollbar-track-dark-200;
 }
 
 :root {
