--- a/client/global.css
+++ b/client/global.css
@@ -29,3 +29,21 @@ body {
 :root {
     --leaflet-tile-filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7) !important;
 }
+
+.circle {
+    position: fixed;
+    width: 0.4rem;
+    height: 0.4rem;
+    border-radius: 100%;
+    background-color: #ff7000;
+    animation: circle-animation 0.6s ease-in-out;
+}
+
+@keyframes circle-animation {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
